force-app/main/default/objects/Integration_Data_Syncing__c/Integration_Data_Syncing__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls the data syncing between objects and external systems.</description>
    <label>Integration Data Syncing</label>
</CustomObject>