force-app/main/default/objects/Integration_Data_Syncing__c/fields/Integration_Log_Delete_Number_Of_Months__c.field-meta.xml
<CustomField>
    <fullName>Integration_Log_Delete_Number_Of_Months__c</fullName>
    <description>The number of months old an Integration Log entry should be to be considered for deletion from the org. This setting is referenced by the IntegrationLogDeleteBatch job</description>
    <inlineHelpText>The number of months old an Integration Log entry should be to be considered for deletion from the org. This setting is referenced by the IntegrationLogDeleteBatch job</inlineHelpText>
    <label>Integration Log Delete Number Of Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>