force-app/main/default/objects/Integration_Data_Syncing__c/fields/Update_Salesforce_Data_To_Oscar__c.field-meta.xml
<CustomField>
    <fullName>Update_Salesforce_Data_To_Oscar__c</fullName>
    <defaultValue>true</defaultValue>
    <description>To decide whether to sync data from Salesforce to Oscar or not.</description>
    <label>Update Salesforce Data To Oscar</label>
    <type>Checkbox</type>
</CustomField>