force-app/main/default/objects/Integration_Data_Syncing__c/fields/Update_Salesforce_Data_To_Ski__c.field-meta.xml
<CustomField>
    <fullName>Update_Salesforce_Data_To_Ski__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This setting determines whether updates to Salesforce data should be synced to the corresponding data within the Ski system.</description>
    <inlineHelpText>This setting determines whether updates to Salesforce data should be synced to the corresponding data within the Ski system.</inlineHelpText>
    <label>Update Salesforce Data To Ski</label>
    <type>Checkbox</type>
</CustomField>